# api/dto/login_credentials.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginCredentials struct {
+	Username string `json:"username" binding:"required" example:"jdoe"`
+	Password string `json:"password" binding:"required" example:"P@ssw0rd!"`
+}
